--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
 .navbar{
     width: 1200px;
     height: 75px;
-    /* background-color: red; */
     margin: auto;
 }
 
@@ -99,10 +98,11 @@ ul li a:hover{
     border-bottom-right-radius: 5px;
     border-top-left-radius: 5px;
     transition: 0.2s ease;
+    cursor: pointer;
 }
 
 .btn:hover{
-    color: black;
+    color: white;
 }
 
 .btn:focus{
@@ -157,7 +157,7 @@ ul li a:hover{
 }
 
 .cn:hover{
-    background-color: black;
+    background-color: white;
 }
 
 .content .span{
@@ -172,17 +172,9 @@ ul li a:hover{
     position: absolute;
     top: -20px;
     left: 870px;
-    /* transform: translate(0%, -5%); */
+    transform: translate(0%, -5%);
     border-radius: 10px;
     padding: 25px;
-}
-
-input{
-    margin-top: 10px;
-}
-
-.login{
-    font-size: 30px;
 }
 
 .form h2{
@@ -197,10 +189,19 @@ input{
     font-size: 22px;
 }
 
-.form .input{
-    width: ;
-    height: ;
+.form input{
+    width: 240px;
+    height: 35px;
     background: transparent;
+    border-bottom: 1px solid #ff7200;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    color: white;
+    font-size: 15px;
+    letter-spacing: 1px;
+    margin-top: 30px;
+    font-family: sans-serif;
 }
 
 .form input:focus{
@@ -251,21 +252,245 @@ input{
 .liw{
     padding-top: 15px;
     padding-bottom: 10px;
+    text-align: center;
 }
 
 .icons a{
     text-decoration: none;
-    color: white;
 }
 
 .icons img{
-    color: white;
-    font-size: 30px;
-    padding-left: 14px;
+    padding-left: 25px;
     padding-top: 5px;
-    transition: 0.4s ease;
+    transition: 0.3s ease;
 }
 
-.icons img:hover{
+.icons .ion-icon:hover{
     color: #ff7200;
+}
+
+@media (max-width:1100px){
+    .main{
+        width: 100%;
+        background: linear-gradient( to top, rgba(0,0,0,0.5)50%, rgba(0,0,0,0.5)50%), url(1.jpg);
+        background-position: center;
+        background-size: cover;
+        height: 100vh;
+    }
+    
+    .navbar{
+        width: 1200px;
+        height: 75px;
+        margin: auto;
+    }
+    
+    .header{
+        width: 100px;
+        float: left;
+        height: 70px;
+    }
+    
+    .logo{
+        color: #ff7200;
+        font-size: 32px;
+        font-family: Arial;
+        padding-left: 15px;
+        padding-top: 10px;
+        float: left;
+        margin-top: 5px;
+    }
+    
+    .menu{
+        width: 300px;
+        height: 70px;
+        float: left;
+    }
+    
+    ul li{
+        list-style: none;
+        margin-left: 50px;
+        margin-top: 27px;
+        font-size: 14px;
+    }
+    
+    .content{
+        width: 1200px;
+        height: auto;
+        margin: auto;
+        color: white;
+        position: relative;
+    }
+    
+    .content .par{
+        padding-left: 20px;
+        padding-bottom: 25px;
+        font-family: Arial;
+        letter-spacing: 1px;
+        line-height: 30px;
+    }
+
+    .form{
+        width: 250px;
+        height: 380px;
+        background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
+        position: absolute;
+        top: -20px;
+        left: 670px;
+        transform: translate(0%, -5%);
+        border-radius: 10px;
+        padding: 20px;
+    }
+}
+
+@media (max-width:820px){
+    .main{
+        width: 100%;
+        background: linear-gradient( to top, rgba(0,0,0,0.5)50%, rgba(0,0,0,0.5)50%), url(1.jpg);
+        background-position: center;
+        background-size: cover;
+        height: 100vh;
+    }
+    
+    .navbar{
+        width: 1200px;
+        height: 75px;
+        margin: auto;
+    }
+    
+    .header{
+        width: 100px;
+        float: left;
+        height: 70px;
+    }
+    
+    .logo{
+        color: #ff7200;
+        font-size: 32px;
+        font-family: Arial;
+        padding-left: 9px;
+        padding-top: 10px;
+        float: left;
+        margin-top: 5px;
+    }
+    
+    .menu{
+        width: 300px;
+        height: 70px;
+        float: left;
+    }
+    
+    ul li{
+        list-style: none;
+        margin-left: 35px;
+        margin-top: 27px;
+        font-size: 13px;
+    }
+
+    .search{
+        width: 300px;
+        float: left;
+        margin-left: 135px;
+    }
+    
+    .content{
+        width: 3000px;
+        height: auto;
+        margin: auto;
+        color: white;
+        position: relative;
+    }
+    
+    .content .par{
+        /* top: -10px; */
+        padding-left: 20px;
+        padding-bottom: 25px;
+        font-family: Arial;
+        /* letter-spacing: 1px; */
+        line-height: 25px;
+    }
+
+    .form{
+        width: 270px;
+        height: 380px;
+        background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
+        position: absolute;
+        top: -20px;
+        left: 500px;
+        transform: translate(0%, -5%);
+        border-radius: 10px;
+        padding: 20px;
+    }
+}
+
+@media (max-width:912px){
+    .main{
+        width: 100%;
+        background: linear-gradient( to top, rgba(0,0,0,0.5)50%, rgba(0,0,0,0.5)50%), url(1.jpg);
+        background-position: center;
+        background-size: cover;
+        height: 100vh;
+    }
+    
+    .navbar{
+        width: 1200px;
+        height: 75px;
+        margin: auto;
+    }
+    
+    .header{
+        width: 100px;
+        float: left;
+        height: 70px;
+    }
+    
+    .logo{
+        color: #ff7200;
+        font-size: 20px;
+        font-family: Arial;
+        padding-left: 5px;
+        padding-top: 10px;
+        float: left;
+        margin-top: 5px;
+    }
+    
+    .menu{
+        width: 200px;
+        height: 70px;
+        float: left;
+    }
+    
+    ul li{
+        list-style: none;
+        margin-left: 5px;
+        margin-top: 27px;
+        font-size: 10px;
+    }
+    
+    .content{
+        width: 1200px;
+        height: auto;
+        margin: auto;
+        color: white;
+        position: relative;
+    }
+    
+    .content .par{
+        padding-left: 20px;
+        padding-bottom: 25px;
+        font-family: Arial;
+        letter-spacing: 1px;
+        line-height: 30px;
+    }
+
+    .form{
+        width: 250px;
+        height: 380px;
+        background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
+        position: absolute;
+        top: -20px;
+        left: 670px;
+        transform: translate(0%, -5%);
+        border-radius: 10px;
+        padding: 20px;
+    }
 }
