--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .main{
@@ -12,14 +13,15 @@
 }
 
 .navbar{
-    width: 1200px;
-    height: 75px;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
     margin: auto;
+    margin-bottom: -20px;
 }
 
 .header{
     width: 200px;
-    float: left;
     height: 70px;
 }
 
@@ -27,20 +29,16 @@
     color: #ff7200;
     font-size: 35px;
     font-family: Arial;
-    padding-left: 20px;
-    padding-top: 10px;
-    float: left;
+    padding: 10px;
     margin-top: 5px;
 }
 
 .menu{
     width: 400px;
     height: 70px;
-    float: left;
 }
 
 ul{
-    float: left;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -67,8 +65,7 @@ ul li a:hover{
 
 .search{
     width: 330px;
-    float: left;
-    margin-left: 270px;
+    margin-left: 200px;
 }
 
 .srch{
@@ -81,7 +78,6 @@ ul li a:hover{
     color: white;
     border-right: none;
     font-size: 15px;
-    float: left;
     padding: 10px;
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px;
@@ -92,21 +88,30 @@ ul li a:hover{
     height: 40px;
     background: #ff7200;
     border: 1px solid #ff7200;
-    margin-top: 13px;
+    margin-top: 12px;
+    margin-left: -6px;
     color: white;
     font-size: 15px;
     border-bottom-right-radius: 5px;
     border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
     transition: 0.2s ease;
     cursor: pointer;
 }
 
 .btn:hover{
-    color: white;
+    color: black;
+    background-color: white;
+    border: none;
 }
 
 .btn:focus{
     outline: none;
+}
+
+span{
+    color: #ff7200;
 }
 
 .search-b{
@@ -116,35 +121,33 @@ ul li a:hover{
 .content{
     width: 1200px;
     height: auto;
-    margin: auto;
     color: white;
-    position: relative;
+    display: flex;
+    /* justify-content: space-between; */
 }
 
 .content .par{
-    padding-left: 20px;
     padding-bottom: 25px;
     font-family: Arial;
+    font-size: 20px;
     letter-spacing: 1.2px;
     line-height: 30px;
 }
 
 .content h1{
     font-family: 'Times New Roman';
-    font-size: 50px;
-    padding-left: 20px;
-    margin-top: 9%;
-    letter-spacing: 2px;
+    font-size: 70px;
+    letter-spacing: 3px;
 }
 
 .content .cn{
     width: 160px;
-    height: 40px;
+    height: 50px;
     background: #ff7200;
     border: none;
-    margin-bottom: 10px;
-    margin-left: 20px;
-    font-size: 18px;
+    /* margin-bottom: 10px; */
+    /* margin-left: 20px; */
+    font-size: 20px;
     border-radius: 10px;
     cursor: pointer;
     transition: .4s ease;
@@ -160,21 +163,19 @@ ul li a:hover{
     background-color: white;
 }
 
-.content .span{
-    color: #ff7200;
-    font-style: 65px;
+.left{
+    margin-top: 5%;
+    margin-left: 4em;
 }
 
 .form{
-    width: 250px;
-    height: 380px;
+    width: 280px;
+    height: 410px;
+    margin-top: 5%;
     background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
-    position: absolute;
-    top: -20px;
-    left: 870px;
     transform: translate(0%, -5%);
     border-radius: 10px;
-    padding: 25px;
+    padding: 20px;
 }
 
 .form h2{
@@ -186,7 +187,7 @@ ul li a:hover{
     margin: 2px;
     padding: 8px;
     color: #ff7200;
-    font-size: 22px;
+    font-size: 24px;
 }
 
 .form input{
@@ -198,7 +199,7 @@ ul li a:hover{
     border-right: none;
     border-left: none;
     color: white;
-    font-size: 15px;
+    font-size: 17px;
     letter-spacing: 1px;
     margin-top: 30px;
     font-family: sans-serif;
@@ -239,7 +240,7 @@ ul li a:hover{
 
 .form .link{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
+    font-size: 18px;
     padding-top: 20px;
     text-align: center;
 }
@@ -261,236 +262,469 @@ ul li a:hover{
 
 .icons img{
     padding-left: 25px;
+    /* background-color: black; */
+    /* font-size: 50px; */
     padding-top: 5px;
     transition: 0.3s ease;
 }
 
-.icons .ion-icon:hover{
-    color: #ff7200;
-}
-
-@media (max-width:1100px){
+@media screen and (max-width:222px ){
+    
     .main{
         width: 100%;
-        background: linear-gradient( to top, rgba(0,0,0,0.5)50%, rgba(0,0,0,0.5)50%), url(1.jpg);
-        background-position: center;
-        background-size: cover;
-        height: 100vh;
     }
-    
-    .navbar{
-        width: 1200px;
-        height: 75px;
-        margin: auto;
-    }
-    
-    .header{
-        width: 100px;
-        float: left;
-        height: 70px;
-    }
-    
-    .logo{
-        color: #ff7200;
-        font-size: 32px;
-        font-family: Arial;
-        padding-left: 15px;
-        padding-top: 10px;
-        float: left;
-        margin-top: 5px;
-    }
-    
-    .menu{
-        width: 300px;
-        height: 70px;
-        float: left;
-    }
-    
-    ul li{
-        list-style: none;
-        margin-left: 50px;
-        margin-top: 27px;
-        font-size: 14px;
-    }
-    
+
     .content{
-        width: 1200px;
-        height: auto;
-        margin: auto;
-        color: white;
-        position: relative;
+        width: 222px;
     }
-    
-    .content .par{
-        padding-left: 20px;
-        padding-bottom: 25px;
-        font-family: Arial;
-        letter-spacing: 1px;
-        line-height: 30px;
+
+    .navbar{
+        width: 222px;
     }
 
     .form{
-        width: 250px;
-        height: 380px;
+        width: 160px;
+        height: 205px;
+        margin-top: 2.5%;
         background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
-        position: absolute;
-        top: -20px;
-        left: 670px;
         transform: translate(0%, -5%);
-        border-radius: 10px;
-        padding: 20px;
+        border-radius: 5px;
+        padding: 10px;
     }
+
+    .form h2{
+        width: 140px;
+        font-family: sans-serif;
+        background-color: white ;
+        border-radius: 2.5px;
+        text-align: center ;
+        margin: 2px;
+        padding: 4px;
+        color: #ff7200;
+        font-size: 16px;
+    }
+
+    .form input{
+        width: 123px;
+        height: 18px;
+        background: transparent;
+        border-bottom: 1px solid #ff7200;
+        border-top: none;
+        border-right: none;
+        border-left: none;
+        color: white;
+        font-size: 10px;
+        letter-spacing: 1px;
+        margin-top: 7.5px;
+        font-family: sans-serif;
+    }
+
+    .btnn{
+        width: 140px;
+        height: 20px;
+        background-color: #ff7200;
+        border: none;
+        margin-top: 10px;
+        font-size: 12px;
+        border-radius: 5px;
+        cursor: pointer;
+        color: white;
+        transition: 0.4s ease;
+    }
+
+    .form .link{
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 11px;
+        padding-top: 5px;
+        text-align: center;
+    }
+
+    .liw{
+        padding-top: 9px;
+        font-size: 12px;
+        padding-bottom: 5px;
+        text-align: center;
+    }
+    
+
 }
 
-@media (max-width:820px){
+@media screen and (max-width:320px) {
+
     .main{
         width: 100%;
+        height: 100vh;
         background: linear-gradient( to top, rgba(0,0,0,0.5)50%, rgba(0,0,0,0.5)50%), url(1.jpg);
         background-position: center;
         background-size: cover;
-        height: 100vh;
     }
-    
+
     .navbar{
-        width: 1200px;
-        height: 75px;
+        width: 100%;
+        height: 100px;
         margin: auto;
+        margin-bottom: -20px;
+        display: flex;
+        flex-direction: column;
     }
-    
+
+    .content{
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+    }
+
     .header{
         width: 100px;
-        float: left;
-        height: 70px;
+        height: 35px;
+        margin-left: 100px;
     }
-    
+
     .logo{
-        color: #ff7200;
-        font-size: 32px;
-        font-family: Arial;
-        padding-left: 9px;
-        padding-top: 10px;
-        float: left;
-        margin-top: 5px;
+        width: 100px;
+        font-size: 19px;
     }
-    
+
     .menu{
-        width: 300px;
-        height: 70px;
-        float: left;
+        width: 400px;
+        height: 15px;
+        margin-left: 40px;
+        margin-top: -10px;
     }
     
-    ul li{
+    ul{
+        margin-top: -47px;
+        margin-left: 280px;
+    }
+
+    .menu ul li{
         list-style: none;
-        margin-left: 35px;
-        margin-top: 27px;
-        font-size: 13px;
+        font-size: 9px;
+        margin-left: 10px;
     }
 
     .search{
-        width: 300px;
-        float: left;
-        margin-left: 135px;
+        margin-top: -10px;
+        /* width: 200px; */
+        /* height: 45px; */
+        /* margin-left: 500px; */
     }
     
-    .content{
-        width: 3000px;
-        height: auto;
-        margin: auto;
-        color: white;
-        position: relative;
-    }
-    
-    .content .par{
-        /* top: -10px; */
-        padding-left: 20px;
-        padding-bottom: 25px;
-        font-family: Arial;
-        /* letter-spacing: 1px; */
-        line-height: 25px;
-    }
-
-    .form{
-        width: 270px;
-        height: 380px;
-        background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
-        position: absolute;
-        top: -20px;
-        left: 500px;
-        transform: translate(0%, -5%);
-        border-radius: 10px;
-        padding: 20px;
-    }
-}
-
-@media (max-width:912px){
-    .main{
-        width: 100%;
-        background: linear-gradient( to top, rgba(0,0,0,0.5)50%, rgba(0,0,0,0.5)50%), url(1.jpg);
-        background-position: center;
-        background-size: cover;
-        height: 100vh;
-    }
-    
-    .navbar{
-        width: 1200px;
-        height: 75px;
-        margin: auto;
-    }
-    
-    .header{
+    .srch{
+        font-family: 'Times New Roman';
         width: 100px;
-        float: left;
-        height: 70px;
-    }
-    
-    .logo{
-        color: #ff7200;
-        font-size: 20px;
-        font-family: Arial;
-        padding-left: 5px;
-        padding-top: 10px;
-        float: left;
-        margin-top: 5px;
-    }
-    
-    .menu{
-        width: 200px;
-        height: 70px;
-        float: left;
-    }
-    
-    ul li{
-        list-style: none;
-        margin-left: 5px;
-        margin-top: 27px;
+        height: 25px;
+        background: transparent;
+        border: 1px solid #ff7200;
+        margin-top: 0px;
+        margin-left: 50px;
+        color: white;
+        border-right: none;
         font-size: 10px;
     }
     
-    .content{
-        width: 1200px;
-        height: auto;
-        margin: auto;
+    .btn{
+        width: 50px;
+        height: 25px;
+        background: #ff7200;
+        border: 1px solid #ff7200;
+        margin-top: 0px;
+        /* margin-left: -6px; */
         color: white;
-        position: relative;
+        font-size: 10px;
+        transition: 0.2s ease;
+        cursor: pointer;
+    }
+
+    .content .par{
+        padding-bottom: 0px;
+        font-family: Arial;
+        font-size: 11px;
+        letter-spacing: 1.0px;
+        line-height: 17px;
+        margin-left: -50px;
+        /* margin-top: -5px; */
     }
     
+    .content h1{
+        font-family: 'Times New Roman';
+        font-size: 33px;
+        letter-spacing: 3px;
+        margin-left: -50px;
+        margin-top: -30px;
+    }
+    
+    .content .cn{
+        width: 80px;
+        height: 25px;
+        background: #ff7200;
+        border: none;
+        font-size: 10px;
+        cursor: pointer;
+        transition: .4s ease;
+        margin-top: 5px;
+        margin-left: -50px;
+    }
+    
+    
+
+}
+
+@media screen and (max-width:620px) {
+
+    body .main .content{
+        width: 620px;
+    }
+
+    .main .navbar{
+        width: 100%;
+        /* display: flex; */
+        /* justify-content: space-evenly; */
+        margin: auto;
+        margin-bottom: -20px;
+    }
+
+    .header{
+        width: 100px;
+        height: 35px;
+    }
+
+    .navbar .header .logo{
+        font-size: 20px;
+        padding: 5px;
+        margin-top: 15px;
+        margin-right: 0px;
+        margin-left: 5px;
+        width: 70px;
+    }
+
+    .navbar .menu{
+        width: 300px;
+        height: 35px;
+        margin-left: 0px;
+    }
+
+    .menu ul{
+        margin-left: 0px;
+    }
+    
+    .menu ul li{
+        list-style: none;
+        margin-right: 21px;
+        margin-left: 0px;
+        margin-top: 23px;
+        font-size: 10px;
+    }
+
+    .navbar .search{
+        width: 190.5px;
+        margin-left: 0px;
+        height: 45px;
+    }
+
+    .search .srch{
+        font-family: 'Times New Roman';
+        width: 120px;
+        height: 35px;
+        margin-top: 13px;
+        color: white;
+        border-right: none;
+        font-size: 12px;
+        padding: 7px;
+        margin-left: 0px;
+    }
+
+    .btn{
+        width: 70px;
+        height: 35px;
+        background: #ff7200;
+        border: 1px solid #ff7200;
+        margin-top: 12px;
+        color: white;
+        font-size: 12px;
+    }
+
     .content .par{
-        padding-left: 20px;
-        padding-bottom: 25px;
+        padding-bottom: 20px;
         font-family: Arial;
-        letter-spacing: 1px;
-        line-height: 30px;
+        font-size: 15px;
+        letter-spacing: 2px;
+        line-height: 25px;
+    }
+
+    .content h1{
+        font-family: 'Times New Roman';
+        font-size: 40px;
+        letter-spacing: 3px;
+    }
+
+    .content .cn{
+        width: 90px;
+        height: 30px;
+        background: #ff7200;
+        font-size: 15px;
+        border-radius: 5px;
+    }
+
+    .left{
+        width: 310px;
     }
 
     .form{
-        width: 250px;
-        height: 380px;
-        background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
-        position: absolute;
-        top: -20px;
-        left: 670px;
-        transform: translate(0%, -5%);
+        width: 310px;
+        height: 410px;
+        margin-top: 9%;
         border-radius: 10px;
         padding: 20px;
     }
+
+    .form h2{
+        width: 200px;
+        font-family: sans-serif;
+        background-color: white ;
+        border-radius: 5px;
+        text-align: center ;
+        margin: 2px;
+        padding: 8px;
+        color: #ff7200;
+        font-size: 20px;
+    }
+
+    .form input{
+        width: 200px;
+        height: 35px;
+        color: white;
+        font-size: 14px;
+        letter-spacing: 1px;
+        margin-top: 30px;
+        font-family: sans-serif;
+    }
+    
+    .btnn{
+        width: 210px;
+        height: 40px;
+        background-color: #ff7200;
+        border: none;
+        margin-top: 22px;
+        font-size: 15px;
+        border-radius: 8px;
+    }
+
+    .form .link{
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 14px;
+        padding-top: 15px;
+        text-align: center;
+    }
+
+    .liw{
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .icons img{
+        padding-left: 20px;
+        padding-top: 5px;
+        transition: 0.3s ease;
+    }
+    
+
+}
+
+@media screen and (max-width:940px){
+
+    .main{
+        width: 100%;
+    }
+
+    .navbar{
+        width: 100%;
+    }
+
+    .main .content{
+        width: 940px;
+    }
+
+    .content .form{
+        margin-right: 90px;
+    }
+
+    .content .form{
+        margin-left: 39px;
+    }
+}
+
+@media screen and (max-width:980px){
+    .form{
+        margin-left: 10px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+
+    .main{
+        width: 100%;
+    }
+
+    .navbar{
+        width: 1024px;
+    }
+
+    .search{
+        margin-left: -10px;
+    }
+
+    .srch{
+        width: 150px;
+        margin-left: 45px;
+    }
+
+    .navbar .logo{
+        /* width: 10px; */
+        margin-left: -50px;
+    }
+
+    ul {
+        margin-left: 50px;
+    }
+
+    .left{
+        width: 600px;
+        margin-left: 30px;
+        /* margin-right: -10px; */
+    }
+
+    .form{
+        margin-right: 50px;
+    }
+
+    .content{
+        width: 1024px;
+        margin-right: 10px;
+    }
+
+    .content .cn{
+        margin-top: -10px;
+    }
+}
+
+@media screen and (max-width: 1440px) {
+
+    .logo{
+        margin-left: -100px;
+    }
+
+    .menu{
+        margin-left: -150px;
+    }
+
+    .search{
+        margin-left: 45px;
+    }
+
+    .content{
+        margin-top: 50px;
+    }
+    
 }
